# project-nanotron

./: .dockerignore  .editorconfig  .gitignore  README.md  docker-compose.yml  requirements.txt
.github/workflows/: ci.yml
config/: hardware.toml  risk.toml  strategy.toml
control_plane/: Dockerfile  README.md  pyproject.toml
control_plane/src/nanotron_control/: __init__.py  __main__.py  app.py  data_plane_client.py  deps.py  models.py  settings.py  store.py
control_plane/src/nanotron_control/auth/: __init__.py  audit.py  jwt.py  rbac.py
control_plane/src/nanotron_control/cache/: __init__.py  redis_client.py
control_plane/src/nanotron_control/db/: __init__.py  postgres.py  timescale.py
control_plane/src/nanotron_control/db/migrations/: 0001_initial.sql
control_plane/src/nanotron_control/observability/: __init__.py  otel.py  sentry.py
control_plane/src/nanotron_control/routers/: backtests.py  health.py  risk.py  snapshots.py  strategies.py
control_plane/src/nanotron_control/streaming/: __init__.py  kafka_consumer.py  kafka_producer.py
control_plane/tests/: conftest.py  test_auth.py  test_backtests.py  test_db_lazy.py  test_observability_lazy.py  test_risk.py  test_strategies.py
core/cpp/: Makefile  order_gateway.cpp  shared_memory.hpp
core/jax/: __init__.py  kernels.py  mcts.py  prior_network.py
core/mojo/: difficulty.mojo  dynscaling.mojo  nanotron.mojo
data/arrow/: zero_copy.py
data/flight/: arrow_flight_server.py
data/kdb/: gpu_loader.q  schema.q
data/serialization/: flatbuf_codec.py
data_io/: pyproject.toml
data_io/src/nanotron_data/: __init__.py
data_io/src/nanotron_data/connectors/: __init__.py  alpaca.py  base.py  binance.py  coinbase.py  databento.py  hyperliquid.py  polygon.py  yfinance.py
data_io/src/nanotron_data/connectors/news/: __init__.py  edgar.py  newsapi.py  reddit.py  twitter_x.py
data_io/src/nanotron_data/connectors/onchain/: __init__.py  uniswap_v3.py  web3_client.py
data_io/src/nanotron_data/features/: __init__.py  duckdb_features.py  iceberg_io.py  polars_pipeline.py  registry.py
data_io/src/nanotron_data/quality/: __init__.py  checks.py  lineage.py
data_io/tests/: test_circuit_breaker.py  test_crypto_onchain.py  test_features.py  test_news.py  test_polygon.py  test_quality.py
docs/: ARCHITECTURE.md  FORMAL_VERIFICATION.md
docs/adr/: 0001-typed-c-abi-signal-contract.md  0002-rust-middleware-axum.md  0003-control-plane-vs-data-plane-split.md  0004-formal-verification-cpp-hot-path.md  README.md
execution/: Cargo.toml  Dockerfile
execution/benches/: ring_buffer.rs  serde.rs
execution/src/: lib.rs  main.rs  metrics.rs  shared_memory.rs  websocket.rs
execution/tests/: proptest_signal.rs
frontend/: Dockerfile  nginx.conf  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/public/: index.html
frontend/src/: App.tsx  OrderBook.tsx  components.tsx  index.css
ml/: pyproject.toml
ml/src/nanotron_ml/: __init__.py
ml/src/nanotron_ml/features/: __init__.py  path_signatures.py
ml/src/nanotron_ml/llm/: __init__.py  anthropic_client.py  local_qwen.py  openai_client.py  sentiment.py
ml/src/nanotron_ml/llm/rag/: __init__.py  edgar_rag.py  vector_store.py
ml/src/nanotron_ml/models/: __init__.py  gnn_cross_asset.py  mamba.py  moe_regime.py  neural_sde.py  signature_transformer.py  tft.py
ml/src/nanotron_ml/rl/: __init__.py  execution_env.py  ppo_agent.py  risk_aware_reward.py  sac_agent.py
ml/src/nanotron_ml/serving/: __init__.py  canary.py  mlflow_runs.py  onnx_export.py  triton_config.py
ml/src/nanotron_ml/training/: __init__.py  loop.py
ml/src/nanotron_ml/uncertainty/: __init__.py  conformal.py  mc_dropout.py
ml/tests/: test_imports_lazy.py  test_llm.py  test_moe_gnn.py  test_neural_sde.py  test_rl.py  test_serving.py  test_signatures.py  test_tft.py  test_uncertainty.py
monitoring/: prometheus.yml
quant/: README.md  pyproject.toml
quant/src/nanotron_quant/: __init__.py
quant/src/nanotron_quant/backtest/: __init__.py  cost_model.py  engine.py  metrics.py  tear_sheet.py
quant/src/nanotron_quant/cv/: __init__.py  purged.py  walk_forward.py
quant/src/nanotron_quant/factors/: __init__.py  pca.py  shrinkage.py
quant/src/nanotron_quant/features/: __init__.py  frac_diff.py
quant/src/nanotron_quant/labels/: __init__.py  meta_label.py  triple_barrier.py
quant/src/nanotron_quant/portfolio/: __init__.py  hrp.py  kelly.py  mean_variance.py  risk_parity.py
quant/src/nanotron_quant/regime/: __init__.py  bocpd.py  hmm.py
quant/src/nanotron_quant/risk/: __init__.py  drawdown.py  var_cvar.py
quant/tests/: test_backtest.py  test_factors_risk_portfolio.py  test_frac_diff.py  test_purged.py  test_regime.py  test_triple_barrier.py  test_walk_forward.py
scripts/: benchmark.sh  setup.sh
tests/: test_mcts.py
tests/integration/: ring_writer.py  test_cross_language.py
(+19 files in other folders)
